# Planninghub

./: .gitignore  AGENT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Planning_hub_architecture_vision_produit_v_1.md  README_FOR_CODEX.md  index.md
docs/agents/: AGENT.backend.md  AGENT.data.md  AGENT.devops.md  AGENT.docs.md  AGENT.frontend.md  AGENT.qa.md  AGENT.security.md  README.md  agent_backend.md  agent_data_model.md  agent_docs_governance.md  agent_frontend.md  agent_ops_ci.md  index.md
docs/architecture/: README.md  overview_ascii.md
docs/audits/: final_documentation_coherence_audit.md  governance_sync_log.md  implementation_readiness.md
docs/decisions/: 2024-07-26-use-sqlite-for-database.md  2026-01-20-phase-4-status-conflict.md  (+6 more)
planninghub/: __init__.py
tests/: test_app_demo.py  test_application_handler_evaluate_incoming_reservation.py  test_application_vertical_slice.py  test_application_wiring.py  test_cli_adapter_evaluate_incoming_reservation.py  test_cli_smoke.py  test_conflict_detection.py  test_conflict_orchestrator.py  test_conflict_outcomes.py  test_conflict_resolution.py  test_domain_contracts.py  test_evaluate_reservation_use_case.py  test_fastapi_routes_smoke.py  test_http_adapter_mappers.py  test_http_evaluate_reservation_api.py  test_imports.py  test_persistence_adapter_contract.py  test_persistence_adapter_in_memory.py  test_phase3_ports_adapters_skeleton.py  test_repositories_in_memory.py  test_repositories_sqlite.py  test_reservation_repository_in_memory.py
ui/: README.md  dashboard.html  login.html  styles.css
(+129 files in other folders)
