[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planninghub"
version = "0.0.0"
requires-python = ">=3.11,<4.0"
dependencies = ["fastapi>=0.110"]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "ruff>=0.3.0", "httpx>=0.24"]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
